# dbt-adb-demo

./: README.md  pyproject.toml
dbt_adb_demo/: dbt_project.yml
dbt_adb_demo/models/marts/: line_items.py  line_items_with_supp.sql  line_items_with_supp_incr.sql  marts.yml  top_suppliers.sql
dbt_adb_demo/models/marts/common/: top_five_suppliers.sql
dbt_adb_demo/models/staging/tpch/: src_tpch.yml  src_tpch_lineitem.sql  src_tpch_part.sql  src_tpch_part_supp.sql  src_tpch_supplier.sql
dbt_adb_demo/snapshots/: lineitems_snp.sql
