[tool.poetry]
name = "dbt-adb-demo"
version = "0.1.0"
description = ""
authors = ["Ashley Rodan <ashleyrodan@gmail.com>"]
readme = "README.md"
packages = [{include = "dbt_adb_demo"}]

[tool.poetry.dependencies]
python = "^3.11"
dbt-core = "^1.6.1"
dbt-databricks = "^1.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
